<resources>
    <string name="app_name">Lab06</string>
    <string name="hoten">Họ tên:</string>
    <string name="cmnd">CMND:</string>
    <string name="bangcap">Bằng cấp</string>
    <string name="sothich">Sở thích</string>
    <string name="thongtinbosung">Thông tin bổ sung</string>
    <string name="guithongtin">Gửi thông tin</string>
    <string name="docbao">Đọc báo</string>
    <string name="doccoding">Đọc coding</string>
    <string name="dócach">Đọc sách</string>
    <string name="nhapthongtinbosung">Nhập thông tin bổ sung (nếu có)</string>
    <string name="caodang">Cao đẳng</string>
</resources>