<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thông tin cá nhân"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        tools:ignore="HardcodedText" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoten"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editHoten"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:inputType="textPersonName"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cmnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editCMND"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:inputType="number"
                android:maxLength="9"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bangcap"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trung cấp"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/radcd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caodang" />

        <RadioButton
            android:id="@+id/raddh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đại học"
            android:checked="true"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <TextView
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sothich"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkdocbao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docbao" />

        <CheckBox
            android:id="@+id/chkdocsach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dócach" />

        <CheckBox
            android:id="@+id/chkdoccode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doccoding" />
    </LinearLayout>

    <TextView
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/thongtinbosung"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editBosung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/nhapthongtinbosung"
        android:inputType="TODO"
        android:minHeight="80dp"
        tools:ignore="TextContrastCheck,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnGuithongtin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guithongtin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp" />

</LinearLayout>